--- a/Placement_portal_management-main/about.html
+++ b/Placement_portal_management-main/about.html
@@ -84,10 +84,10 @@ html {
   <div class="column">
     <div class="card">
       <div class="container">
-        <h2>CH.HEMANTH</h2>
+        <h2>CH.HIMANSHI</h2>
         <p class="title">Team lead</p>
         <p>19331A1208</p>
-        <p>challa.hemanth2001@gmail.com</p>
+        <p>vermahimanshi049@gmail.com</p>
       </div>
     </div>
   </div>
@@ -95,10 +95,10 @@ html {
   <div class="column">
     <div class="card">
       <div class="container">
-        <h2>Y. SAI ANKITA</h2>
+        <h2>harshit</h2>
         <p class="title">Team Member</p>
         <p>19331A1264</p>
-        <p>ankita.meghana002@gmail.com</p>
+        <p>harshitjain2804@gmail.com</p>
       </div>
     </div>
   </div>
@@ -106,20 +106,20 @@ html {
   <div class="column">
     <div class="card">
       <div class="container">
-        <h2>G.UDAY</h2>
+        <h2>ojasvi</h2>
         <p class="title">Team Member</p>
         <p>19331A1221</p>
-        <p>udaykumargollapalli@gmail.com</p>
+        <p>rastogiojasvi0@gmail.com</p>
       </div>
     </div>
   </div>
   <div class="column">
     <div class="card">
       <div class="container">
-        <h2>P.KISHAN</h2>
+        <h2>Prashant</h2>
         <p class="title">Team Member</p>
         <p>19331A1245</p>
-        <p>kishanpolaki18@gmail.com</p>
+        <p>prashantkumar@gmail.com</p>
       </div>
     </div>
   </div>
